# muvt

./: CMakeLists.txt  README.md  optimizer_stats.mat  package.xml
config/: dcm_config.yaml  joint_position.txt  simple_trj_optimizer.rviz
config/params/: dcm_config.yaml
config/problem/: cartesio_stack.yaml  centauro_stack.yaml  constraint.yaml  constraint_locomotion.yaml  constraint_manipulation.yaml  dcm_config.yaml  fixed_joints.yaml  fixed_joints_car_model.yaml  fixed_joints_lf.yaml  fixed_joints_lh.yaml  fixed_joints_rf.yaml  fixed_joints_rh.yaml  optimizer_config.yaml  planner_config.yaml  teleop_stack.yaml
config/rviz/: car_model.rviz  dcm_planner.rviz  muvt_test.rviz  simple_trj_optimizer.rviz  simple_trj_optimizer_laptop.rviz  simple_trj_optimizer_sensor.rviz  urdf_parser_test.rviz  wolf.rviz
config/world/: cogimon.world
gazebo_plugin/: move_box.cpp
horizon/: horizon_walking.py
include/controller/: robot_controller.h  robot_controller_car_model.h
include/environment/: edge_collision.h  edge_joint_limits.h  edge_kinematic.h  edge_postural.h  edge_robot_pos.h  edge_robot_vel.h  edge_se3.h  edge_task.h  edge_trajectory_vel.h  edge_xyz.h  obstacle.h  obstacle.h.autosave  robot_pos.h  se3.h  types_planning.h  unary_edge.h  vertex_robot_pos.h  vertex_se3.h
include/optimizer/: optimizer.h
include/simulator/: optimizer.h  optimizer_test.h  simulator.h
launch/: centauro_arm.launch  centauro_car_model.launch  dcm_planner_test.launch  object_recognition_test.launch  optimizer.launch  urdf_parser_test.launch  wolf.launch
matlab/: coll_edge.eps  coll_error.eps  first.mat  kin_error.eps  locomotion.mat  manipulation.mat  manipulation_human.mat  manipulation_stats.eps  opt_time.eps  optimizer_stats_good.mat  plot_time.asv  plot_time.m  untitled.m  vel_err.eps
msg/: ObjectMessage.msg  ObjectMessageString.msg
muvt_core/: CMakeLists.txt  package.xml
muvt_core/cmake/: ExportMuvtCore.cmake  FindCSparse.cmake  FindG2O.cmake
muvt_core/config/params/: dcm_config.yaml
muvt_core/config/rviz/: muvt_test.rviz
muvt_core/include/muvt/environment/contact/: edge_collision.h  edge_multi_relative_poses.h  edge_relative_pose.h  edge_steering.h  vertex_contact.h
muvt_core/include/muvt/environment/joint/: unary_edge.h  vertex_robot_pos.h
muvt_core/include/muvt/optimizer/: optimizer.h
muvt_core/include/muvt/planner/: dcm_planner.h
muvt_core/include/muvt_core/environment/: obstacle.h
muvt_core/include/muvt_core/environment/contact/: contact.h  edge_collision.h  edge_multi_relative_poses.h  edge_relative_pose.h  edge_steering.h  edge_task.h  edge_z_axis.h  vertex_contact.h
muvt_core/include/muvt_core/environment/joint/: edge_collision.h  edge_joint_limits.h  edge_kinematic.h  edge_postural.h  edge_robot_pos.h  edge_robot_vel.h  edge_task.h  edge_trajectory_vel.h  robot_pos.h  unary_edge.h  vertex_robot_pos.h
muvt_core/include/muvt_core/optimizer/: optimizer.h  optimizer_joint.h
muvt_core/include/muvt_core/planner/: dcm_planner.h
muvt_core/launch/: dcm_planner_test.launch
muvt_core/optimizer/src/environment/contact/: edge_collision.cpp  edge_multi_relative_poses.cpp  edge_steering.cpp  vertex_contact.cpp
muvt_core/optimizer/src/environment/joint/: edge_collision.cpp  edge_joint_limits.cpp  edge_kinematic.cpp  edge_postural.cpp  edge_robot_vel.cpp  edge_task.cpp  robot_pos.cpp  unary_edge.cpp
muvt_core/optimizer/src/nodes/: planner_executor.h
muvt_core/optimizer/src/optimizer/: optimizer.cpp
muvt_core/optimizer/src/planner/: dcm_planner.cpp
muvt_core/src/environment/contact/: contact.cpp  edge_collision.cpp  edge_multi_relative_poses.cpp  edge_relative_pose.cpp  edge_steering.cpp  edge_task.cpp  edge_z_axis.cpp  vertex_contact.cpp
muvt_core/src/environment/joint/: edge_collision.cpp  edge_joint_limits.cpp  edge_kinematic.cpp  edge_postural.cpp  edge_robot_pos.cpp  edge_robot_vel.cpp  edge_task.cpp  edge_trajectory_vel.cpp  robot_pos.cpp  unary_edge.cpp  vertex_robot_pos.cpp
muvt_core/src/nodes/: planner_executor.h
muvt_core/src/optimizer/: optimizer.cpp  optimizer_contact.cpp  optimizer_joint.cpp
muvt_core/src/planner/: dcm_planner.cpp
muvt_ros/: CMakeLists.txt  package.xml
muvt_ros/include/muvt_ros/: contact_planner_executor.h  joint_planner_executor.h  planner_executor.h  utils.h
muvt_ros/launch/: dcm_planner_test.launch
muvt_ros/src/: contact_planner_executor.cpp  contact_planner_executor_node.cpp  joint_planner_executor.cpp  joint_planner_executor_node.cpp  planner_executor.cpp  planner_executor_node.cpp
optimizer/: CMakeLists.txt
optimizer/gazebo_plugin/: move_box.cpp
optimizer/src/controller/: robot_controller.cpp  robot_controller_car_model.cpp
optimizer/src/environment/: edge_collision.cpp  edge_joint_limits.cpp  edge_kinematic.cpp  edge_postural.cpp  edge_robot_vel.cpp  edge_task.cpp  robot_pos.cpp
optimizer/src/environment/contact/: contact.cpp  edge_collision.cpp  edge_multi_relative_poses.cpp  edge_relative_pose.cpp  edge_steering.cpp  vertex_contact.cpp
optimizer/src/environment/joint/: edge_collision.cpp  edge_joint_limits.cpp  edge_kinematic.cpp  edge_postural.cpp  edge_robot_pos.cpp  edge_robot_vel.cpp  edge_task.cpp  edge_trajectory_vel.cpp  robot_pos.cpp  unary_edge.cpp  vertex_robot_pos.cpp
optimizer/src/nodes/: car_model_node.cpp  optimizer_node.cpp  optimizer_node.cpp.autosave  planner_executor.cpp  planner_executor.h  planner_executor_node.cpp  robot_controller_car_model_node.cpp
optimizer/src/optimizer/: optimizer.cpp  optimizer_contact.cpp
optimizer/src/planner/: dcm_planner.cpp
optimizer/src/simulator/: optimizer_test.cpp
optimizer/test/: dcm_planner_test_node.cpp  urdf_parser_test_node.cpp
python/: error.ui  main_window.py  teb_test_gui.py  vertices.ui  vision_times.ui
scripts/: xbotcore.sh
src/src_vision/: CMakeLists.txt
src/src_vision/src/vision/: point_cloud_manager.cpp
srv/: SetObstacle.srv
test/: object_recognition_test.cpp  urdf_parser_test_node.cpp
vision/: CMakeLists.txt
vision/src/nodes/: vision_node.cpp
vision/src/vision/: point_cloud_manager.cpp
(+74 files in other folders)
