<package format="2">
  <name>muvt_core</name>
  <version>1.2.4</version>
  <description>
  muvt_core library using g2o package
  </description>
  <maintainer email="luca.rossini@iit.it">luca</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>libg2o</build_depend>
  <build_export_depend>libg2o</build_export_depend>
  <exec_depend>libg2o</exec_depend>

</package>
